[tool.poetry]
name = "mp-dqn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mp_dqn"}]

[tool.poetry.dependencies]
python = "^3.8.10"
gym = "^0.10.5"
click = "^8.1.3"
numba = "^0.56.4"
torch = "^1"
wandb = "^0.15.3"
py-notifier = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
